Fix navbar on mobile

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,29 +1,22 @@
-/*navigasi*/
-/*tampilan paling atas*/
-.tempat{
-  width: 20%;
-  margin-left: 5%;
-}
-
-.atas, nav{
-  margin-left:;
-}
-
-/*tampilan untuk pilihan*/
-.navtampil{
-  max-height: 20px;
-  /*border-bottom: 3px solid rgb(130, 130, 130);*/
-  text-align: center;
-  font-size: 15px;
-  padding: 10px 0 0 0;
-
-}
-
-nav ul li{
-  display: inline-block;
-  font-weight: bold;
+/*navbar*/
+.nav-desktop{
+  /*font-weight: bold;*/
   font-family: 'Open Sans';
-  padding: 5px 0 0 0;
+  padding: 15px 0;
+}
+#brand-logo{
+  text-align: center;
+}
+
+#log{
+  text-align: right;
+}
+@media (max-width : 600px) {
+    #hello-message {display:none;}
+    #brand-logo{text-align: left;}
+    .header h1{
+      font-size: 10px;
+    }
 }
 
 
